# Polynomial

./: CMakeLists.txt  LinkedList.h  LinkedList.hpp  LinkedList_start.hpp  ListInterface.hpp  Node.hpp  Node_start.hpp  Polynomial.cpp  Polynomial.hpp  PrecondViolatedExcept.h  Term.cpp  Term.hpp  pcalc.cpp  student_tests.cpp  student_tests1.cpp
